[project]
name = "ml-trading"
version = "0.1.0"
description = "ML system for intraday equity trading: multi-timeframe technical model, risk engine, event-driven catalyst model"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "polars>=1.0",
    "pyarrow>=15.0",
    "duckdb>=1.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "PyYAML>=6.0",
    "lightgbm>=4.3",
    "scikit-learn>=1.4",
    "optuna>=3.6",
    "typer>=0.12",
    "httpx>=0.27",
]

[project.optional-dependencies]
deep = ["torch>=2.3"]
catboost = ["catboost>=1.2"]
tabpfn = ["tabpfn>=2.0"]
foundation = ["chronos-forecasting>=1.2"]
events-nlp = ["transformers>=4.41"]
drl = ["gymnasium>=0.29", "stable-baselines3>=2.3"]
vol = ["arch>=7.0"]
brokers = ["alpaca-py>=0.21", "yfinance>=0.2.40"]
dashboard = ["streamlit>=1.35", "plotly>=5.20"]
rust = ["maturin>=1.5"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.4"]

[project.scripts]
mlt = "ml_trading.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ml_trading"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"src/ml_trading/cli.py" = ["B008"]  # typer.Option in defaults is the Typer idiom
